--- a/src/mockup/css/style.css
+++ b/src/mockup/css/style.css
@@ -10,15 +10,13 @@ header, section, nav {
    margin-bottom: 2em;
 }
 
- .nclab-row,
  .navi-buttons,
  .creation-buttons {
    margin-bottom: 0.5em;
  }
 
 /** body spacing from top of page */
-.body,
-.nclab-row {
+.body {
    margin-top: 2em;
 }
 
