added pictures to the homepage  functionality will be split up in subsequent edits

--- a/src/mockup/css/style.css
+++ b/src/mockup/css/style.css
@@ -3,8 +3,7 @@ header, section, nav {
    display: block;
 }
 
-.masthead,
-.featured-content {
+.masthead {
    background-color: #02c8a7;
    margin-bottom: 2em;
 }
