--- a/src/mockup/css/style.css
+++ b/src/mockup/css/style.css
@@ -7,12 +7,33 @@ header, section, nav {
    background-color: #02c8a7;
    margin-bottom: 2em;
 }
-
+.button {
+    background-color: none;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+.table,
+.question_content
+{
+   border: 1px solid lightgrey;
+}
+.question_type {
+   border: 1px solid lightgrey;
+   padding: .5em;
+   margin: .05em;
+}
  .navi-buttons,
  .creation-buttons {
    margin-bottom: 0.5em;
  }
-
+.username {
+   margin-right= 0em;
+}
 /** body spacing from top of page */
 .body {
    margin-top: 2em;
