--- a/src/mockup/css/style.css
+++ b/src/mockup/css/style.css
@@ -4,7 +4,7 @@ header, section, nav {
 }
 
 .masthead {
-   background-color: #02c8a7;
+   background-color: #5cb85c;
    margin-bottom: 2em;
 }
 .button {
@@ -17,10 +17,26 @@ header, section, nav {
     display: inline-block;
     font-size: 16px;
 }
-.answer
+.questions {
+   margin: 2em;
+}
+.answer,
 {
    padding: .1em;
    margin-left: 2em;
+}
+.cto-table
+{
+   padding:1em;
+}
+.cto-value
+{
+   vertical-align: center;
+}
+.panel-default
+{
+   border: 1px solid lightgrey;
+   margin: .5em;
 }
 .cto-question,
 .mc-question,
@@ -57,7 +73,7 @@ header, section, nav {
 
 .featured-banner {
    color: #fff;
-   background: #337ab7;
+   background: #00ff00
    margin-bottom: 2em;
    border-radius: 2%;
 }
